<resources>
    <string name="app_name">Bingham App</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="login_to_skyward_label">Login to Skyward</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="remember_username_password_label">Remember My Username/Password</string>
    <string name="verify_pin_label">Verify your PIN:</string>
    <string name="create_pin_label">Please create a 4 digit PIN to secure your login details:</string>
    <string name="login_button_label">Login</string>
    <string name="secure_login_details_label">Secure your Login Details</string>
    <string name="countdown_no_events">There are no Events to Countdown To.</string>

    <string-array name="drawer_list_strings">
        <item>0_Main</item>
        <item>1_School News</item>
        <item>5_Upcoming Events</item>
        <item>2_Bell Schedules</item>
        <item>3_Lunch Menus</item>
        <item>4_School Map</item>
        <item>7_GPA Calc</item>
        <item>6_Skyward Access</item>
    </string-array>

</resources>
